tests/assembler/bad/code_in_record.j
.class public super test
.super java/lang/Object

.record
    a I .attributes
        .code stack 94 locals 2
            return
        .end code
    .end attributes
.end record
